# movie_rating_tool

./: .gitignore  README.md  pyproject.toml
notebooks/: movie_rating_tool_demo.ipynb
src/movie_rating_tool/: __init__.py  __main__.py  analysis.py  cli.py  data_loader.py  models.py  rating_engine.py  visualization.py
